# ecommerce-customer-segmentation

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: data_description.md
docs/: QUICK_START.md  class_report.md
notebooks/: font_setup.py
notebooks/data/results/: customer_segmentation_results.csv  segment_summary.csv
scripts/: check_status.py  fix_chinese_fonts.py  regenerate_plots.py  run_analysis.py  setup.sh  setup_chinese_fonts.py  test_visualization_fix.py
src/customer_segmentation/: __init__.py  cli.py  pipeline.py
src/customer_segmentation/analysis/: __init__.py  rfm_calculator.py
src/customer_segmentation/data/: __init__.py  cleaner.py  loader.py
src/customer_segmentation/utils/: __init__.py  config.py  logger.py
src/customer_segmentation/visualization/: __init__.py  visualizer.py
